--- a/model.ipynb
+++ b/model.ipynb
@@ -1391,7 +1391,7 @@
     "print(\"R2\",r2_score(y_test,y_pred))\n",
     "print(\"MAE\",mean_absolute_error(y_test,y_pred))\n",
     "print(\"MsE\",mean_squared_error(y_test,y_pred))\n",
-    "print(\"RSME\",math.sqrt(mean_absolute_error(y_test,y_pred)))\n"
+    "print(\"RSME\",math.sqrt(mean_squared_error(y_test,y_pred)))\n"
    ]
   },
   {
